--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@notifycode/hash-it": "^0.0.2",
 		"@supabase/supabase-js": "^2.56.1",
 		"zod": "^4.1.5"
 	}
